02-envoy-gateway/12-backendtrafficpolicy/manifests/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tuned-backend
  namespace: demo
spec:
  parentRefs:
    - name: tuned-backend
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: helloworld
          port: 8080
